--- a/signlibrary/src/main/res/layout/sign_activity_grid_paint.xml
+++ b/signlibrary/src/main/res/layout/sign_activity_grid_paint.xml
@@ -8,26 +8,19 @@
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
-    <include
-        android:id="@+id/actionbar"
-        layout="@layout/sign_actionbar"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/sign_actionbar_height" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
-        android:layout_weight="1"
         android:background="@drawable/sign_bg_shape"
         android:padding="10dp">
 
         <android.king.signature.view.HVScrollView
             android:id="@+id/sv_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="201dp"
+            android:layout_height="47dp"
             android:fadingEdge="none">
 
             <android.king.signature.view.HandWriteEditView
@@ -37,7 +30,16 @@
                 android:background="@null" />
         </android.king.signature.view.HVScrollView>
 
-    </RelativeLayout>
+        <Button
+            android:id="@+id/tv_ok"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="保存"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/sign_actionbar_text_size" />
+
+    </LinearLayout>
 
 
     <LinearLayout
@@ -111,8 +113,7 @@
             android:layout_height="@dimen/sign_grid_size"
             android:layout_gravity="center"
             android:layout_margin="10dp"
-            android:maxWidth="250dp"
-            android:padding="10dp" />
+            />
 
     </LinearLayout>
 
